cafemanagement/k8/appdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe-management
  namespace: cafe-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cafe-management
  template:
    metadata:
      labels:
        app: cafe-management
    spec:
      containers:
      - name: cafe-management
        image: gfrgt/backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: application-config
          mountPath: /app/config
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: application-config
        configMap:
          name: cafe-config
