cafemanagement/k8/appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: cafe-management
  namespace: cafe-management
spec:
  selector:
    app: cafe-management
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
