cafemanagement/k8/mysqlservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-standalone
  namespace: cafe-management
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
