cafemanagement/k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vprofile.bits.work.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cafe-management
            port:
              number: 8080
